--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
+shareit.header.owner=X-Sharer-User-Id
+
 # TODO Append connection to DB
 #spring.datasource.driverClassName
 #spring.datasource.url
