--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/later
+spring.datasource.username=aab90
+spring.datasource.password=123456
+
 
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
@@ -9,8 +16,4 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 shareit.header.owner=X-Sharer-User-Id
 
-# TODO Append connection to DB
-#spring.datasource.driverClassName
-#spring.datasource.url
-#spring.datasource.username
-#spring.datasource.password
+
