--- a/pom.xml
+++ b/pom.xml
@@ -92,9 +92,13 @@
 			<version>${lombok-mapstruct-binding.version}</version>
 		</dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<resources>
