--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=shareit
+spring.datasource.password=shareit
 
 
 logging.level.org.springframework.orm.jpa=INFO
