--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,16 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.url=jdbc:postgresql://db:5432/shareit
-spring.datasource.username=postgres
-spring.datasource.password=12345
-spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+# spring.datasource.username=postgres
+# spring.datasource.password=12345
+# spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.username=test
+spring.datasource.password=test
 
 
 logging.level.org.springframework.orm.jpa=INFO
