--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # spring.datasource.username=postgres
 # spring.datasource.password=12345
 # spring.datasource.driver-class-name=org.postgresql.Driver
+spring.config.activate.on-profile=ci,test
 spring.datasource.url=jdbc:postgresql://db:5432/shareit
 spring.datasource.username=postgres
 spring.datasource.password=postgres
