--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # spring.datasource.username=postgres
 # spring.datasource.password=12345
 # spring.datasource.driver-class-name=org.postgresql.Driver
-spring.config.activate.on-profile=ci,test
-spring.datasource.url=jdbc:postgresql://db:5432/shareit
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -22,5 +21,16 @@ logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
 shareit.header.owner=X-Sharer-User-Id
+
+
+#---
+spring.config.activate.on-profile=ci,test
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:shareit
+spring.datasource.username=test
+spring.datasource.password=test
+
+
 
 
