--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,13 +17,13 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 shareit.header.owner = X-Sharer-User-Id
 
 #---
-spring.config.activate.on-profile=ci,test
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=test
-spring.datasource.password=test
-shareit.header.owner = X-Sharer-User-Id
+# spring.config.activate.on-profile=ci,test
+# spring.jpa.properties.hibernate.hbm2ddl.auto=update
+# spring.datasource.driverClassName=org.h2.Driver
+# spring.datasource.url=jdbc:h2:mem:shareit
+# spring.datasource.username=test
+# spring.datasource.password=test
+# shareit.header.owner = X-Sharer-User-Id
 
 
 
