--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareitbase
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 logging.level.org.springframework.orm.jpa=INFO
