--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
 
 	<properties>
 		<java.version>21</java.version>
+		<postgresql.version>42.7.3</postgresql.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
 		<lombok.version>1.18.30</lombok.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
@@ -39,6 +40,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
+			<version>${postgresql.version}</version>
 			<scope>runtime</scope>
 		</dependency>
 
