--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,19 @@
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.sql.init.mode=always
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=dbuser
-spring.datasource.password=12345
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-logging.level.org.springframework.orm.jpa=INFO
-logging.level.org.springframework.transaction=INFO
-logging.level.org.springframework.transaction.interceptor=TRACE
-logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
-
+# spring.jpa.hibernate.ddl-auto=none
+# spring.jpa.show-sql=true
+# spring.jpa.properties.hibernate.format_sql=true
+# spring.sql.init.mode=always
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#
+# spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+# spring.datasource.username=dbuser
+# spring.datasource.password=12345
+# spring.datasource.driver-class-name=org.postgresql.Driver
+#
+# logging.level.org.springframework.orm.jpa=INFO
+# logging.level.org.springframework.transaction=INFO
+# logging.level.org.springframework.transaction.interceptor=TRACE
+# logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+#
 shareit.header.owner = X-Sharer-User-Id
 
 #---
@@ -26,5 +26,21 @@ shareit.header.owner = X-Sharer-User-Id
 # shareit.header.owner = X-Sharer-User-Id
 
 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.format_sql=true
+spring.sql.init.mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.show-sql=true
 
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.zalando.logbook=TRACE
+
+# TODO Append connection to DB
+spring.datasource.driver-class-name = org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareitbase
+spring.datasource.username=dbuser
+spring.datasource.password=12345
 
