--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,7 +40,7 @@ logging.level.org.zalando.logbook=TRACE
 
 # TODO Append connection to DB
 spring.datasource.driver-class-name = org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareitbase
-spring.datasource.username=dbuser
-spring.datasource.password=12345
+spring.datasource.url=jdbc:postgresql://db:5432/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
 
