--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=test
+spring.datasource.password=test
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 logging.level.org.springframework.orm.jpa=INFO
