--- a/server/pom.xml
+++ b/server/pom.xml
@@ -224,6 +224,13 @@
 								<goal>check</goal>
 							</goals>
 							<configuration>
+								<excludes>
+									<exclude>server/src/main/java/ru/practicum/shareit/booking/model/**</exclude>
+									<exclude>server/src/main/java/ru/practicum/shareit/item/model/**</exclude>
+									<exclude>server/src/main/java/ru/practicum/shareit/request/model/**</exclude>
+									<exclude>server/src/main/java/ru/practicum/shareit/user/model/**</exclude>
+									<exclude>server/src/main/java/ru/practicum/shareit/exception/**</exclude>
+								</excludes>
 								<rules>
 									<rule>
 										<element>BUNDLE</element>
