sprint 16: to revision1 upd2 coverage

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -225,11 +225,11 @@
 							</goals>
 							<configuration>
 								<excludes>
-									<exclude>server/src/main/java/ru/practicum/shareit/booking/model/**</exclude>
-									<exclude>server/src/main/java/ru/practicum/shareit/item/model/**</exclude>
-									<exclude>server/src/main/java/ru/practicum/shareit/request/model/**</exclude>
-									<exclude>server/src/main/java/ru/practicum/shareit/user/model/**</exclude>
-									<exclude>server/src/main/java/ru/practicum/shareit/exception/**</exclude>
+									<exclude>ru.practicum.shareit.booking.model.*</exclude>
+									<exclude>ru.practicum.shareit.item.model.*</exclude>
+									<exclude>ru.practicum.shareit.request.model.*</exclude>
+									<exclude>ru.practicum.shareit.user.model.*</exclude>
+									<exclude>ru.practicum.shareit.exception.*</exclude>
 								</excludes>
 								<rules>
 									<rule>
