--- a/pom.xml
+++ b/pom.xml
@@ -16,14 +16,22 @@
 
 	<name>ShareIt</name>
 
-	<properties>
-		<java.version>21</java.version>
-	</properties>
-
 	<modules>
 		<module>gateway</module>
 		<module>server</module>
 	</modules>
+
+	<properties>
+		<java.version>21</java.version>
+		<lombok.version>1.18.30</lombok.version>
+		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
+		<hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
+		<httpclient5.version>5.2.1</httpclient5.version>
+		<hamcrest.version>3.0</hamcrest.version>
+		<postgresql.version>42.6.0</postgresql.version>
+		<h2.version>2.2.220</h2.version>
+	</properties>
 
 	<build>
 		<pluginManagement>
